--- a/PDF/Informe.Rmd
+++ b/PDF/Informe.Rmd
@@ -978,3 +978,17 @@ plot3d(df_h$V1, df_h$V2, df_h$V3, col=get_colors(11, df_h),
        main= "Data Set h.csv")
 ```
 
+```{r}
+df_h$V5 = NULL
+df_h$class = 7*(df_h$V4-min(df_h$V4))/(max(df_h$V4)-min(df_h$V4)) + 1
+df_h$class = floor(df_h$class)
+df_h$class[df_h$class == 8] = 7
+
+```
+
+```{r, fig.width = 3 , fig.height = 3, fig.align = "center", webgl=TRUE}
+plot3d(df_h$V1, df_h$V2, df_h$V3, col=df_h$class,
+       type="s", xlab = "Feature 1", ylab = "Feature 2", zlab = "Feature 3",
+       main= "Data Set h.csv")
+```
+
